Fuzzy multiple search added

--- a/demo_classifier.ipynb
+++ b/demo_classifier.ipynb
@@ -49,10 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import difflib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=['ali','kazim','kainat','tatheer','abc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=['ali','kazim','hurain','zurait','kainat','tatheer','naqas','minsa']"
+   ]
   },
   {
    "cell_type": "code",
