added search engine

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,49 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_list = list(pd.read_csv('Data/base_data.csv')['Text'].values)"
+    "# data_list = list(pd.read_csv('Data/base_data.csv')['Text'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from FuzzyMatching import FuzzyMatcher"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fuzzy_matcher = FuzzyMatcher()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thresold 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# results=fuzzy_matcher.get_matching_list('no need',data_list,threshold=0.1)"
+   ]
   },
   {
    "cell_type": "code",
