v 2.1 notebook demo_classifier and demo_searching after presentation

--- a/demo_classifier.ipynb
+++ b/demo_classifier.ipynb
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = Classifier(method='hybrid')"
+    "clf = Classifier(method='hybrid',db_path='./Stores/classifier_index',store_path='./Stores/classifier.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -38,40 +38,13 @@
        "'NOT_INTRESTED'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.predict('i dont like')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import difflib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=['ali','kazim','kainat','tatheer','abc']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b=['ali','kazim','hurain','zurait','kainat','tatheer','naqas','minsa']"
+    "clf.predict('i am not in')"
    ]
   },
   {
@@ -79,7 +52,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 'DNC' or 'NOT_INTRESTED'"
+   ]
   }
  ],
  "metadata": {
