Answering machine added

--- a/demo_searching.ipynb
+++ b/demo_searching.ipynb
@@ -1071,7 +1071,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = search_enginge.search('i\\'m intrested',data_list,threshold=0.8)"
+    "results = search_enginge.search('i\\'m intrested',data_list,threshold=0. )"
    ]
   },
   {
